[gd_scene load_steps=8 format=4]

[ext_resource type="Script" path="res://Menus/victory_screen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bth67r14ul3go" path="res://Menus/background.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dvn3b3ocji568" path="res://Art/Tiny Pickaxe Art.png" id="3"]
[ext_resource type="PackedScene" uid="uid://dl7toa1ds5go7" path="res://UI/blue_button.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dhq30sok3dv7x" path="res://Art/Center of the Earth Reached.png" id="5"]
[ext_resource type="PackedScene" uid="uid://bia3qrus3wvlp" path="res://Menus/statistics.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dcoptsn8erdwh" path="res://UI/panel.tscn" id="7"]

[node name="Victory Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("2")]
layout_mode = 1
offset_left = -6.0
offset_right = -6.0

[node name="Title" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -446.0
offset_top = 30.0
offset_right = -82.0
offset_bottom = 128.0
grow_horizontal = 2
stretch = true
stretch_shrink = 7

[node name="SubViewport" type="SubViewport" parent="Title"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(52, 14)
render_target_update_mode = 4

[node name="Label" type="Label" parent="Title/SubViewport"]
offset_left = 1.0
offset_top = 1.0
offset_right = 421.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "victory!"

[node name="Pickaxe Art" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 42.0
offset_right = 478.0
offset_bottom = 114.0
texture = ExtResource("3")

[node name="Pickaxe Art2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 914.0
offset_top = 42.0
offset_right = 986.0
offset_bottom = 114.0
texture = ExtResource("3")
flip_h = true

[node name="Play Again" parent="." instance=ExtResource("4")]
layout_mode = 0
offset_left = 1506.0
offset_top = 852.0
offset_right = 1830.0
offset_bottom = 925.0
text = "play again >>"

[node name="Main Menu" type="Button" parent="."]
layout_mode = 2
offset_left = 1506.0
offset_top = 954.0
offset_right = 1830.0
offset_bottom = 1027.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 36
text = "main menu >>"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 126.0
offset_right = 1086.0
offset_bottom = 168.0
texture = ExtResource("5")

[node name="Statistics" parent="." instance=ExtResource("6")]
offset_left = 1470.0
offset_top = 72.0
offset_right = 1470.0
offset_bottom = 72.0

[node name="Panel" parent="." instance=ExtResource("7")]
visible = false
layout_mode = 0
offset_left = 606.0
offset_top = 192.0
offset_right = 804.0
offset_bottom = 300.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 24.0
offset_right = 164.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 48
text = "deck"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 192.0
offset_right = 1422.0
offset_bottom = 1050.0
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 36

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 5

[connection signal="mouse_entered" from="Play Again" to="." method="_on_play_again_mouse_entered"]
[connection signal="pressed" from="Play Again" to="." method="_on_play_again_pressed"]
[connection signal="mouse_entered" from="Main Menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
